missing border and spacing fixed on about page

--- a/css/index.css
+++ b/css/index.css
@@ -229,11 +229,16 @@ footer nav a {
 /* override default text-container width */
 #about-intro {
     width: 100%;
+
+    padding: 20px;
+
+    border-bottom: 2px dotted black;
+    margin-bottom: 30px;
 }
 
 #about-process{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     flex-wrap: wrap;
 
     margin-bottom: 20px;
